--- a/public/profile.html
+++ b/public/profile.html
@@ -2,127 +2,203 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الملف الشخصي - SchoolX</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
-        :root { --g: #d4af37; --d: #1a2526; --d2: #2a3a3b; }
-        * { margin:0; padding:0; box-sizing:border-box; }
         body {
             font-family: 'Cairo', sans-serif;
             background: #0f1419;
-            color: #fff;
+            color: #e2e8f0;
+            margin: 0;
+            padding: 0;
             min-height: 100vh;
-            padding-bottom: 72px;
-            font-size: 12.8px;
-            line-height: 1.4;
+            display: flex;
+            flex-direction: column;
         }
-        .c { padding: 7px; }
-        header { text-align: center; padding: 10px 0; }
-        .logo { width: 42px; height: 42px; border: 2.5px solid var(--g); border-radius: 50%; padding: 3px; background: #fff; }
-        h1 { color: var(--g); font-size: 1.12rem; margin-top: 5px; }
-
+        header {
+            background: #1e293b;
+            padding: 20px;
+            text-align: center;
+            border-bottom: 4px solid #d4af37;
+        }
+        .logo {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            border: 4px solid #d4af37;
+            margin-bottom: 10px;
+        }
+        h1 {
+            color: #d4af37;
+            margin: 0;
+            font-size: 1.8rem;
+        }
+        .container {
+            max-width: 600px;
+            margin: 30px auto;
+            padding: 0 20px;
+        }
         .card {
-            background: #fff; color: #111; border-radius: 14px; overflow: hidden;
-            box-shadow: 0 5px 18px rgba(0,0,0,0.5); margin: 7px 0;
+            background: #1e293b;
+            border-radius: 16px;
+            padding: 25px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+            margin-bottom: 20px;
         }
-        .ch {
-            background: linear-gradient(135deg, var(--g), #b8972e);
-            padding: 11px 8px; text-align: center; color: #fff;
+        .info-item {
+            margin-bottom: 18px;
         }
-        .ch h2 { font-size: 1.08rem; margin: 3px 0; }
-        #admin-badge { font-size: 1.3rem; }
-
-        .p { padding: 10px; text-align: center; background: #fafafa; }
-        .p label { font-size: 0.74rem; font-weight: bold; color: #333; margin-bottom: 4px; }
-        progress { width: 100%; height: 6px; border-radius: 3px; }
-        progress::-webkit-progress-value { background: var(--g); border-radius: 3px; }
-        #progress-percentage { margin-top: 4px; font-size: 0.98rem; color: var(--g); font-weight: bold; }
-
-        .f { padding: 11px 9px; }
-        .ig { margin-bottom: 9px; }
-        .ig label { font-size: 0.73rem; color: #333; margin-bottom: 3px; font-weight: 600; }
-        .ig input {
-            width: 100%; padding: 7px 9px; border: 1.8px solid var(--g);
-            border-radius: 8px; font-size: 0.81rem; background: #fdfdfd;
+        .info-item label {
+            display: block;
+            color: #94a3b8;
+            font-size: 0.95rem;
+            margin-bottom: 6px;
+            font-weight: 600;
         }
-        .ig input:focus { outline: none; border-color: var(--d); background: #fff; }
-        .ig input[disabled] { background: #f0f0f0; color: #777; }
-
+        .info-item span, .info-item input {
+            width: 100%;
+            padding: 12px;
+            background: #111827;
+            border: 1px solid #4b5563;
+            border-radius: 10px;
+            color: #e2e8f0;
+            font-size: 1.05rem;
+        }
+        .info-item input {
+            border-color: #d4af37;
+        }
+        .info-item input:focus {
+            outline: none;
+            border-color: #facc15;
+            box-shadow: 0 0 0 3px rgba(212,175,55,0.3);
+        }
         .btn {
-            width: 100%; padding: 9px; background: var(--g); color: var(--d);
-            border: none; border-radius: 9px; font-size: 0.88rem; font-weight: bold;
-            cursor: pointer; margin-top: 5px;
+            width: 100%;
+            padding: 14px;
+            background: #d4af37;
+            color: #0f1419;
+            border: none;
+            border-radius: 12px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
         }
-        .btn:hover { background: #b8972e; }
-
+        .btn:hover {
+            background: #facc15;
+            transform: translateY(-2px);
+        }
+        .progress-container {
+            margin: 25px 0;
+            text-align: center;
+        }
+        progress {
+            width: 100%;
+            height: 12px;
+            border-radius: 10px;
+        }
+        progress::-webkit-progress-bar {
+            background: #1e293b;
+            border-radius: 10px;
+        }
+        progress::-webkit-progress-value {
+            background: linear-gradient(to right, #d4af37, #facc15);
+            border-radius: 10px;
+        }
+        #progress-text {
+            color: #d4af37;
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-top: 8px;
+        }
         .nav {
-            position: fixed; bottom: 0; left: 0; right: 0;
-            background: linear-gradient(180deg, var(--d), var(--d2));
-            padding: 12px 20px 22px; display: flex; justify-content: space-around;
-            align-items: center; border-top-left-radius: 24px; border-top-right-radius: 24px;
-            border-top: 3px solid var(--g); box-shadow: 0 -8px 30px rgba(0,0,0,0.8); z-index: 9999;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: #1e293b;
+            padding: 12px;
+            display: flex;
+            justify-content: space-around;
+            border-top: 3px solid #d4af37;
+            box-shadow: 0 -5px 15px rgba(0,0,0,0.5);
         }
         .nav a {
-            color: var(--g); font-size: 1.45rem; padding: 10px 14px;
-            background: rgba(255,255,255,0.05); border-radius: 50%;
-            transition: all .4s ease; position: relative; backdrop-filter: blur(10px);
+            color: #d4af37;
+            font-size: 1.8rem;
+            text-decoration: none;
+            padding: 10px;
+            border-radius: 50%;
+            transition: all 0.3s;
         }
-        .nav a.active {
-            color: #fff; background: var(--g); transform: translateY(-12px) scale(1.15);
-            box-shadow: 0 8px 25px rgba(212,175,55,0.6);
-        }
-        .nav a.active::after {
-            content: ''; position: absolute; bottom: -12px; left: 50%; transform: translateX(-50%);
-            width: 7px; height: 7px; background: var(--g); border-radius: 50%; box-shadow: 0 0 20px var(--g);
+        .nav a.active, .nav a:hover {
+            background: #d4af37;
+            color: #0f1419;
+            transform: scale(1.15);
         }
     </style>
 </head>
 <body>
 
-<div class="c">
-    <header>
-        <img src="logo.png" alt="شعار المعهد" class="logo">
-        <h1>الملف الشخصي</h1>
-    </header>
+<header>
+    <img src="logo.png" alt="شعار المعهد" class="logo">
+    <h1>الملف الشخصي</h1>
+</header>
 
+<div class="container">
     <div class="card">
-        <div class="ch">
-            <h2 id="user-name">جاري التحميل...</h2>
-            <span id="admin-badge" style="display:none;">👑</span>
-        </div>
-
-        <div class="p">
+        <div class="progress-container">
             <label>نسبة اكتمال الملف</label>
             <progress id="profile-progress" value="0" max="100"></progress>
-            <div id="progress-percentage">0%</div>
+            <div id="progress-text">0%</div>
         </div>
 
-        <div class="f">
-            <form id="profile-form">
-                <div class="ig"><label>الاسم الكامل</label><input type="text" id="full-name" disabled></div>
-                <div class="ig"><label>اسم المستخدم</label><input type="text" id="username" disabled></div>
-                <div class="ig"><label>رقم الهاتف</label><input type="tel" id="phone"></div>
-                <div class="ig"><label>اسم ولي الأمر</label><input type="text" id="parentName"></div>
-                <div class="ig"><label>رقم بطاقة ولي الأمر</label><input type="text" id="parentId"></div>
-                <button type="submit" class="btn">حفظ التغييرات</button>
-            </form>
+        <div class="info-item">
+            <label>الاسم الكامل</label>
+            <span id="full-name">جاري التحميل...</span>
         </div>
+
+        <div class="info-item">
+            <label>اسم المستخدم</label>
+            <span id="username">جاري التحميل...</span>
+        </div>
+
+        <div class="info-item">
+            <label>رقم الهاتف</label>
+            <input type="tel" id="phone" placeholder="أدخل رقم هاتفك">
+        </div>
+
+        <div class="info-item">
+            <label>اسم ولي الأمر</label>
+            <input type="text" id="parentName" placeholder="أدخل اسم ولي الأمر">
+        </div>
+
+        <div class="info-item">
+            <label>رقم بطاقة ولي الأمر</label>
+            <input type="text" id="parentId" placeholder="أدخل الرقم القومي">
+        </div>
+
+        <button class="btn" id="save-btn">حفظ التغييرات</button>
     </div>
 </div>
 
-<nav class="nav"></nav>
+<nav class="nav">
+    <a href="Home.html"><i class="fas fa-home"></i></a>
+    <a href="profile.html" class="active"><i class="fas fa-user"></i></a>
+    <a href="exams.html"><i class="fas fa-book"></i></a>
+    <a href="leaderboard.html"><i class="fas fa-trophy"></i></a>
+</nav>
 
 <script>
-document.addEventListener('DOMContentLoaded', async () => {
-    // 1. جلب بيانات المستخدم من localStorage
-    const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
+// جلب البيانات من localStorage فور تحميل الصفحة
+document.addEventListener('DOMContentLoaded', () => {
+    const user = JSON.parse(localStorage.getItem('loggedInUser'));
 
-    // لو مفيش يوزر مسجل → رجّعه لتسجيل الدخول
-    if (!loggedInUser || !loggedInUser.username || !loggedInUser.type) {
+    if (!user || !user.username) {
         Toastify({
             text: "يرجى تسجيل الدخول أولاً!",
             style: { background: "#dc3545" },
@@ -132,142 +208,44 @@ document.addEventListener('DOMContentLoaded', async () => {
         return;
     }
 
-    const username = loggedInUser.username;
-    const userType = loggedInUser.type; // student أو parent أو admin
+    // عرض البيانات اللي موجودة في localStorage
+    document.getElementById('full-name').textContent = user.fullName || 'غير محدد';
+    document.getElementById('username').textContent = user.username || 'غير محدد';
 
-    // 2. تحديد الـ endpoint بناءً على النوع
-    let endpoint;
-    if (userType === 'student' || userType === 'parent') {
-        endpoint = `/api/students/${username}`;
-    } else if (userType === 'admin') {
-        endpoint = `/api/admins/${username}`;
-    } else {
-        Toastify({
-            text: "نوع المستخدم غير معروف!",
-            style: { background: "#dc3545" }
-        }).showToast();
-        return;
-    }
+    // جلب البيانات الإضافية (لو كانت محفوظة من قبل)
+    const savedProfile = JSON.parse(localStorage.getItem('userProfile') || '{}');
+    document.getElementById('phone').value = savedProfile.phone || '';
+    document.getElementById('parentName').value = savedProfile.parentName || '';
+    document.getElementById('parentId').value = savedProfile.parentId || '';
 
-    let user = null;
-    try {
-        const response = await fetch(endpoint);
-
-        if (!response.ok) {
-            if (response.status === 404) {
-                Toastify({
-                    text: "المستخدم غير موجود! جرب تسجيل الدخول تاني.",
-                    style: { background: "#dc3545" },
-                    duration: 6000
-                }).showToast();
-            } else {
-                Toastify({
-                    text: `خطأ في السيرفر: ${response.status}`,
-                    style: { background: "#dc3545" },
-                    duration: 6000
-                }).showToast();
-            }
-            return;
-        }
-
-        user = await response.json();
-
-    } catch (err) {
-        Toastify({
-            text: "لا يوجد اتصال بالإنترنت أو مشكلة في السيرفر",
-            style: { background: "#dc3545" },
-            duration: 7000
-        }).showToast();
-        return;
-    }
-
-    // 3. التأكد من وجود profile
-    user.profile = user.profile || { phone: '', parentName: '', parentId: '' };
-
-    // 4. عرض البيانات
-    document.getElementById('user-name').textContent = user.fullName || user.username;
-    document.getElementById('full-name').value = user.fullName || '';
-    document.getElementById('username').value = user.username;
-    document.getElementById('phone').value = user.profile.phone || '';
-    document.getElementById('parentName').value = user.profile.parentName || '';
-    document.getElementById('parentId').value = user.profile.parentId || '';
-
-    // 5. حساب نسبة الاكتمال
-    const fields = ['phone', 'parentName', 'parentId'];
-    const completed = fields.filter(f => user.profile[f]?.trim()).length;
+    // حساب نسبة الاكتمال (3 حقول)
+    const fields = [savedProfile.phone, savedProfile.parentName, savedProfile.parentId];
+    const completed = fields.filter(f => f && f.trim()).length;
     const percentage = Math.round((completed / 3) * 100);
     document.getElementById('profile-progress').value = percentage;
-    document.getElementById('progress-percentage').textContent = percentage + '%';
+    document.getElementById('progress-text').textContent = `${percentage}%`;
 
-    // 6. لو أدمن، يظهر البادج
-    if (userType === 'admin') {
-        document.getElementById('admin-badge').style.display = 'inline-block';
-    }
-
-    // 7. رسالة ترحيب
-    Toastify({
-        text: `أهلاً يا ${user.fullName?.split(' ')[0] || username}!`,
-        style: { background: "#d4af37" },
-        duration: 4000
-    }).showToast();
-
-    // 8. حفظ التعديلات
-    document.getElementById('profile-form').addEventListener('submit', async (e) => {
-        e.preventDefault();
-
+    // حفظ التعديلات في localStorage فقط (مؤقت لحد ما نحل السيرفر)
+    document.getElementById('save-btn').addEventListener('click', () => {
         const updatedProfile = {
             phone: document.getElementById('phone').value.trim(),
             parentName: document.getElementById('parentName').value.trim(),
             parentId: document.getElementById('parentId').value.trim()
         };
 
-        try {
-            const res = await fetch(endpoint, {
-                method: 'PUT',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ profile: updatedProfile })
-            });
+        localStorage.setItem('userProfile', JSON.stringify(updatedProfile));
 
-            if (res.ok) {
-                const newPercentage = Math.round((fields.filter(f => updatedProfile[f]).length / 3) * 100);
-                document.getElementById('profile-progress').value = newPercentage;
-                document.getElementById('progress-percentage').textContent = newPercentage + '%';
+        const newCompleted = [updatedProfile.phone, updatedProfile.parentName, updatedProfile.parentId].filter(f => f.trim()).length;
+        const newPercentage = Math.round((newCompleted / 3) * 100);
+        document.getElementById('profile-progress').value = newPercentage;
+        document.getElementById('progress-text').textContent = `${newPercentage}%`;
 
-                Toastify({
-                    text: newPercentage === 100 ? "مبروك! ملفك مكتمل 100%" : "تم الحفظ بنجاح!",
-                    style: { background: "#28a745" },
-                    duration: 4000
-                }).showToast();
-            } else {
-                Toastify({
-                    text: "فشل في الحفظ، جرب تاني",
-                    style: { background: "#dc3545" }
-                }).showToast();
-            }
-        } catch (err) {
-            Toastify({
-                text: "لا يوجد اتصال بالإنترنت",
-                style: { background: "#dc3545" }
-            }).showToast();
-        }
+        Toastify({
+            text: newPercentage === 100 ? "مبروك! ملفك مكتمل 100%" : "تم حفظ التغييرات بنجاح",
+            style: { background: "#28a745" },
+            duration: 4000
+        }).showToast();
     });
-
-    // 9. الناف بار ديناميكي
-    const navItems = [
-        { href: 'index.html', icon: 'fa-solid fa-house' },
-        { href: 'Home.html', icon: 'fa-solid fa-chart-line' },
-        { href: 'profile.html', icon: 'fa-solid fa-user', active: true },
-        { href: 'exams.html', icon: 'fa-solid fa-book-open' },
-        { href: 'leaderboard.html', icon: 'fa-solid fa-trophy' }
-    ];
-
-    if (userType === 'admin') {
-        navItems.push({ href: 'admin.html', icon: 'fa-solid fa-cogs' });
-    }
-
-    document.querySelector('.nav').innerHTML = navItems.map(item => 
-        `<a href="\( {item.href}" class=" \){item.active ? 'active' : ''}"><i class="${item.icon}"></i></a>`
-    ).join('');
 });
 </script>
 
